glFusion ChangeLog

v1.1.7 svn
----------
- Tweak SWFUploader to now allow display of thumbnails and allow adding
  title and description (Mark)
- Ensure multiple header() calls are not made when site error occurs (Mark)
- Media Gallery: Remove jUpload and replace with Flash-based uploader (Mark H.)
- Media Gallery: Batch caption edit did not call PLG_itemSaved()
- Added cancel confirmation to forum post cancel.
- Implemented timerconfigclass.class.php (ported from Geeklog v1.6.1)
- Implemented polls auto tags (ported from Geeklog v1.6.1)
- Implemented 4 new template vars for articles to allow plugins additional
  integration opportunities: (Mark)
    - plugin_icon_vars
    - plugin_meta_vars
    - plugin_body_vars
    - plugin_footer_vars
- Add topic id to topic lists to help multi-linqual sites (Mark)
- Add title attribute to What's New (Mark)
    - Stories
    - Comments - already supported
    - FileMgmt
    - Links - already supported
    - Media Gallery
- FileMgmt: Added file_download autotag (Mark H.)
- Moved rating code out of Media Gallery into core (Mark)
  - implemented rating for articles
  - updated FileMgmt / Media Gallery to use new rating system
- Media Gallery - Updated SWFObject to v2.2 (Mark)
- Fixed bug in PLG_getConfigElementHelp() where it did not pass the proper
  arguments (Mark)
- CAPTCHA - Added reCAPTCHA support (Mark)
- Fourm plugin - Improved handling of the cancel request (Mark)
- Forum plugin - Add cancel button to create topic (Mark)
- Forum plugin - Fixed paging issue when going to a specific topic (Mark)
- Media Gallery: Added PLG_setTemplateVars() call to the album view (Mark)
- Added ICS (calendar export) to syndication library (Mark)
- Added autotag logic to template library (Mark)
- Upgrade Geshi to v1.0.8.4 (Mark)
- BBcode handler - fixed issue where some posts would show as blank (Mark)
- Upgrade FCKeditor to 2.6.5 (Mark)
- CAPTCHA: Force static image open to use binary mode (Mark)